--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
+    "epic-spinners": "^1.0.3",
     "particles.js": "^2.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
