--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "aos": "^2.3.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "epic-spinners": "^1.0.3",
     "particles.js": "^2.0.0",
